# hexagonal_fastapi

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  script.sh  settings.json
src/: main.py
src/domain/entities/: user.py
src/domain/repositories/: user_repository.py
src/domain/use_cases/users/: create_user.py  get_user.py  list_users.py
src/infrastructure/api/routers/: users.py
src/infrastructure/api/schemas/: user.py
src/infrastructure/api/templates/: base.html  index.html
src/infrastructure/repositories/in_memory/: user_repository.py
tests/: conftest.py
tests/e2e/: test_api.py  test_frontend.py  test_health_check.py  test_user_api.py
tests/integration/repositories/: test_user_repository.py
tests/unit/: test_user_usecases.py
tests/unit/domain/use_cases/users/: test_create_user.py  test_get_user.py  test_list_users.py
