[tool.poetry]
name = "hexagonal_fastapi"
version = "0.1.0"
description = "FastAPI with Hexagonal Architecture"
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "src", from = "." }
]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.95.2"
uvicorn = "^0.22.0"
pydantic = {extras = ["email"], version = "^1.10.7"}
python-dotenv = "^1.0.0"
jinja2 = "^3.1.6"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
httpx = "^0.24.1"
mypy = "^1.3.0"
flake8 = "^6.0.0"
black = "^23.3.0"
isort = "^5.12.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=90"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
